# eric-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
eric-bindings/: CHANGELOG.md  Cargo.toml  build.rs
eric-bindings/bindings/: bindings_eric_38_1_6_0_linux_x86_64.rs  bindings_eric_39_6_4_0_linux_x86_64.rs  bindings_eric_40_2_10_0_linux_x86_64.rs
eric-bindings/src/: lib.rs
eric-bindings/src/bindings/: mod.rs
eric-sdk/: CHANGELOG.md  Cargo.toml
eric-sdk/src/: certificate.rs  config.rs  eric.rs  error_code.rs  lib.rs  response.rs  utils.rs
eric-sdk/test_data/taxonomy/v6.5/: SteuerbilanzAutoverkaeufer_PersG.xml
eric-sdk/tests/: test_send.rs  test_validate.rs
