[workspace]
members = [
    "eric-bindings",
    "eric-sdk",
]
resolver = "2"

[workspace.package]
authors = ["quambene <contact.quambene@gmail.com>"]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/quambene/eric-rs"
repository = "https://github.com/quambene/eric-rs"

[workspace.dependencies]
anyhow = "1.0.86"
