[package]
name = "eric-bindings"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust bindings for the ELSTER Rich Client (ERiC)"
documentation = "https://docs.rs/eric-bindings"
keywords = ["eric", "bindings",  "taxes", "accounting"]
categories = ["external-ffi-bindings"]
build = "build.rs"

exclude = ["src/bindings/bindings_eric_39_6_4_0_linux_x86_64.rs"]

[package.metadata.docs.rs]
features = ["no-build"]

[features]
# This feature is used to publish the documentation for `eric-bindings`.
no-build = []

[lib]
path = "src/lib.rs"
name = "eric_bindings"

[dependencies]
anyhow = { workspace = true }

[build-dependencies]
bindgen = "0.69.4"
