[package]
name = "eric-bindings"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust bindings for the ELSTER Rich Client (ERiC)"
documentation = "https://docs.rs/eric-bindings"
keywords = ["eric", "bindings",  "taxes", "accounting"]
categories = ["external-ffi-bindings"]
build = "build.rs"

exclude = ["bindings/"]

[features]
default = []
generate-bindings = ["dep:bindgen"]

[lib]
path = "src/lib.rs"
name = "eric_bindings"

[dependencies]
anyhow = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
bindgen = { version = "0.69.4", optional = true }
