[package]
name = "eric-bindings"
version = "0.4.1"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust bindings for the ELSTER Rich Client (ERiC)"
documentation = "https://docs.rs/eric-bindings"
keywords = ["eric", "bindings",  "taxes", "accounting"]
categories = ["external-ffi-bindings"]
build = "build.rs"

[lib]
path = "src/lib.rs"
name = "eric_bindings"

[package.metadata.docs.rs]
features = ["docs-rs"]

[features]
default = []
generate-bindings = ["dep:bindgen"]
# This feature is used in unit tests.
no-linking = []
# This feature is used to publish the documentation for `eric-bindings`.
docs-rs = []

[dependencies]
anyhow = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
bindgen = { version = "0.69.4", optional = true }
