[package]
name = "eric-sdk"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust SDK for the ELSTER Rich Client (ERiC)"
documentation = "https://docs.rs/eric-sdk"
keywords = ["eric", "sdk",  "taxes", "accounting"]
categories = ["finance"]

[lib]
path = "src/lib.rs"
name = "eric_sdk"

[package.metadata.docs.rs]
features = ["eric-bindings-no-build"]

[features]
eric-bindings-no-build = ["eric-bindings/no-build"]
external-test = []

[dependencies]
eric-bindings = { version = "0.2.0", path = "../eric-bindings" }
anyhow = { workspace = true }

[dev-dependencies]
roxmltree = "0.20.0"
