[package]
name = "eric-sdk"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust SDK for the ELSTER Rich Client (ERiC)"
documentation = "https://docs.rs/eric-sdk"
keywords = ["eric", "sdk",  "taxes", "accounting"]
categories = ["finance"]

[lib]
path = "src/lib.rs"
name = "eric_sdk"

[package.metadata.docs.rs]
features = ["docs-rs"]

[features]
default = []
external-test = []
# This feature is used in CI pipeline for unit tests.
no-linking = ["eric-bindings/no-linking"]
# This feature is used to publish the documentation for `eric-sdk`.
docs-rs = ["eric-bindings/docs-rs"]

[dependencies]
eric-bindings = { version = "0.4.1", path = "../eric-bindings" }
anyhow = { workspace = true }

[dev-dependencies]
roxmltree = "0.20.0"
